[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bargain/black-and-white-border-box-frame-M08B21.jpg" type="Texture" id=1]
[ext_resource path="res://Bargain/Enchanted Land DS D.otf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/Enchanted Land DS D.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Bargain/bargain.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[node name="BargainTabs" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -681.0
margin_top = -206.0
margin_right = -96.0
margin_bottom = 110.0
texture = ExtResource( 1 )
patch_margin_left = 143
patch_margin_top = 141
patch_margin_right = 143
patch_margin_bottom = 142

[node name="Title" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.5
margin_top = 8.0
margin_right = 62.5
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "bargain"

[node name="Slider" type="HSlider" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.5
margin_top = -8.0
margin_right = 227.5
margin_bottom = 8.0
min_value = 50.0
max_value = 200.0
value = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.5
margin_top = -122.0
margin_right = -166.5
margin_bottom = -60.0
grow_horizontal = 0

[node name="Amount" type="Label" parent="TextureRect/HBoxContainer"]
margin_right = 24.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="Cents" type="Label" parent="TextureRect/HBoxContainer"]
margin_left = 28.0
margin_right = 61.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "C"

[node name="low price" type="HBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -115.5
margin_top = -146.0
margin_right = 39.5
margin_bottom = -84.0
grow_horizontal = 0

[node name="text" type="Label" parent="TextureRect/low price"]
margin_top = 7.0
margin_right = 105.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "low price"
align = 2

[node name="Amount" type="Label" parent="TextureRect/low price"]
margin_left = 109.0
margin_top = 7.0
margin_right = 127.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 2

[node name="Cents" type="Label" parent="TextureRect/low price"]
margin_left = 131.0
margin_top = 7.0
margin_right = 155.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "C"

[node name="high price" type="HBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -123.5
margin_top = -98.0
margin_right = 43.5
margin_bottom = -36.0
grow_horizontal = 0

[node name="text" type="Label" parent="TextureRect/high price"]
margin_top = 7.0
margin_right = 117.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "high price"
align = 2

[node name="Amount" type="Label" parent="TextureRect/high price"]
margin_left = 121.0
margin_top = 7.0
margin_right = 139.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2

[node name="Cents" type="Label" parent="TextureRect/high price"]
margin_left = 143.0
margin_top = 7.0
margin_right = 167.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "C"

[node name="Deal" type="Button" parent="TextureRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.0
margin_top = -126.0
margin_right = -65.0
margin_bottom = -58.0
custom_fonts/font = SubResource( 3 )
text = "Deal"

[node name="Cancel" type="Button" parent="TextureRect"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -179.0
margin_top = -59.0
margin_right = -118.0
margin_bottom = -22.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "cancel"
flat = true

[connection signal="value_changed" from="TextureRect/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="pressed" from="TextureRect/Deal" to="." method="_on_Deal_pressed"]
[connection signal="pressed" from="TextureRect/Cancel" to="." method="_on_Cancel_pressed"]
